examples/test/testpolicy16738.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16738
  namespace: namespace373
spec:
  podSelector:
    matchLabels:
      key11: value41
      key45: value22
      key20: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value40
      podSelector:
        matchLabels:
          key5: value49
          key35: value28
